fix:delete letter spacing for text-xl

--- a/practice-two/src/styles/pages/benefit.css
+++ b/practice-two/src/styles/pages/benefit.css
@@ -136,7 +136,6 @@
   }
 
   .benefit-title {
-    letter-spacing: 0;
     max-width: 486px;
     line-height: normal;
   }
