--- a/practice-two/src/styles/pages/revenue.css
+++ b/practice-two/src/styles/pages/revenue.css
@@ -5,6 +5,7 @@
 
 .revenue-title {
   line-height: 46px;
+  letter-spacing: -0.5px;
 }
 
 .revenue-desc {
@@ -58,6 +59,7 @@
 
   .revenue-title {
     line-height: 68px;
+    letter-spacing: -0.667px;
   }
 
   .revenue-desc {
